(fix) O3-3415: Update scroll height in form-renderer and interactive (#370)
* (fix) O3-3415 : Update scroll height in form-renderer and interactive-builder

* removed horizontal scroll

---------

--- a/src/components/form-renderer/form-renderer.scss
+++ b/src/components/form-renderer/form-renderer.scss
@@ -6,7 +6,8 @@
   background-color: colors.$white-0;
   padding: 1rem;
   overflow-y: scroll;
-  height: 100vh;
+  overflow-x: hidden;
+  height: 95vh;
 }
 
 .loadingContainer {
